--- a/frontend/src/app/content/content.page.html
+++ b/frontend/src/app/content/content.page.html
@@ -20,7 +20,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content style="margin-right: 5px;" class="ion-padding"> <ion-button fill="clear">Lihat Calon</ion-button> 
+  <ion-content class="ion-padding"> <ion-button fill="clear">Lihat Calon</ion-button> 
 
     
     <ion-button fill="clear" (click)="logout()">
