--- a/frontend/src/app/hasil-voting/hasil-voting.page.html
+++ b/frontend/src/app/hasil-voting/hasil-voting.page.html
@@ -4,7 +4,7 @@
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">
+  <ion-content style="text-align:center" class="ion-padding">
 
     <ion-button fill="clear" (click)="routeTo('data-calon-terdaftar')">Data Kandidat</ion-button>
     <br/>
