--- a/frontend/src/app/data-calon-terdaftar/data-calon-terdaftar.page.html
+++ b/frontend/src/app/data-calon-terdaftar/data-calon-terdaftar.page.html
@@ -4,7 +4,7 @@
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">
+  <ion-content style="text-align:center" class="ion-padding">
     <ion-button fill="clear" (click)="routeTo('data-calon-terdaftar')">Data Kandidat</ion-button><br/>
     <ion-button fill="clear" (click)="routeTo('hasil-voting')">Hasil Voting</ion-button>
     <br>
