--- a/frontend/src/app/data-calon/data-calon.page.html
+++ b/frontend/src/app/data-calon/data-calon.page.html
@@ -4,7 +4,7 @@
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">
+  <ion-content style="text-align:center" class="ion-padding">
 
     <ion-button fill="clear" (click)="routeTo('data-calon')">Data Calon</ion-button>
     <ion-button fill="clear" (click)="routeTo('data-calon-terdaftar')">Calon Terdaftar</ion-button>
